- added overflow:hidden and whitespace:wrap to prevent overlapping text at the new RBAC interface.
TODO:
- the hiperlinks to roles should be put under these css styles too.
- some items at the table too.
- check compatibility between overflow and whitespace properties.


git-svn-id: http://svn.ilias.de/svn/ilias/trunk@9209 21b2c9ec-7c21-0410-8b45-9bfb8ed2bfc5

--- a/templates/default/delos.css
+++ b/templates/default/delos.css
@@ -193,6 +193,8 @@ td.nobackground {
 
 td.std, th.std {
 	padding:2px;
+	overflow:hidden;
+	white-space: wrap;
 }
 
 th.il_invisible, td.il_invisible {
@@ -1002,6 +1004,7 @@ td.il_CenterColumn
 	padding-right:15px;
 	padding-left:15px;
 	vertical-align:top;
+	
 }
 
 td.il_RightColumn
